--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "@letterdropcom/gatsby-source-letterdrop": "^0.1.375",
     "gatsby": "^3.11.1",
     "gatsby-plugin-feed": "^3.11.0",
     "gatsby-plugin-gatsby-cloud": "^2.11.0",
